--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ body {
     transition: all 0.3s ease;
     position: absolute;
     right: 44px;
-    top: 0;
+    top: 50px;
     z-index: 5;
     background: var(--card-bg);
     border: 1px solid var(--border-color);
@@ -120,11 +120,11 @@ body {
   
   .search-form.expanded .form-control {
     display: block;
-    width: 200px;
+    width: 180px;
     opacity: 1;
     position: absolute;
     right: 44px;
-    top: 0;
+    top: 50px;
     z-index: 5;
   }
   
