--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,8 @@ body {
     opacity: 0;
     transition: all 0.3s ease;
     position: absolute;
-    right: 60px;
+    left: 50%;
+    transform: translateX(-50%);
     top: 50px;
     z-index: 5;
     background: var(--card-bg);
@@ -120,10 +121,11 @@ body {
   
   .search-form.expanded .form-control {
     display: block;
-    width: 160px;
+    width: 200px;
     opacity: 1;
     position: absolute;
-    right: 60px;
+    left: 50%;
+    transform: translateX(-50%);
     top: 50px;
     z-index: 5;
   }
